# FLP-Rust-SAML2

./: Cargo.toml  LICENSE.APACHE  LICENSE.MIT
.github/workflows/: ci.yml  rust.yml
src/: error.rs  idp.rs  lib.rs  sp.rs
src/idp/: authn_response.rs  logout_response.rs
src/sp/: authn_redirect.rs  logout_redirect.rs  metadata.rs
